<resources>
    <string name="app_name">Agenda</string>
    <string name="lbl_Nome">Nome</string>
    <string name="lbl_Telefone">Telefone</string>
    <string name="lbl_Endereco">Endereço</string>
    <string name="lbl_email" />
    <string name="lbl_nome">Nome</string>
    <string name="lbl_emaill">E-mail</string>
    <string name="lbl_datas_especiais">Datas Especiais</string>
    <string name="lbl_grupo">Grupo</string>
</resources>
